# Siegpunkt

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
siegpunkt/: alembic.ini  app.py  justpy.env  models.py
siegpunkt/alembic/: env.py
siegpunkt/alembic/versions/: ad3f5361329d_init.py
siegpunkt/components/: gamelist.py  new_button.py  page.py  tag.py
